@@ -10,7 +10,11 @@ public class DateTime_Testing {
 		
 		LocalDate startDate = LocalDate.now();
 		LocalDate endDate = startDate.plusMonths(2);
-		List<LocalDate> listOfDates = startDate.datesUntil(endDate).collect(Collectors.toList());
+
+		// INFO: Following next two lines are the same
+        // List<LocalDate> listOfDates = startDate.datesUntil(endDate).collect(Collectors.toList());
+		List<LocalDate> listOfDates = startDate.datesUntil(endDate).toList();
+
 		System.out.println(listOfDates.size());     // 61
 	}
 
